@@ -20,82 +20,83 @@ public class Data implements Serializable{
 
     public Data(String fileName) throws TrainingDataException {
         File inFile = new File(fileName);
-        Scanner sc;
         String line;
         String[] s;
 
-        try {
-            sc = new Scanner(inFile);
+        try (Scanner sc = new Scanner(inFile)){
             line = sc.nextLine();
             if (!line.contains("@schema")) {
+                sc.close();
                 throw new TrainingDataException("Errore nello schema");
             }
+
+            explanatorySet = new ArrayList<>();
+            short iAttribute = 0;
+
+            for(line = sc.nextLine(); !line.contains("@data"); line = sc.nextLine()) {
+                s = line.split(" ");
+                if (s[0].equals("@desc")){
+                    if(s[2].equals("discrete")) {
+                        explanatorySet.add(new DiscreteAttribute(s[1], iAttribute));
+                    } else if (s[2].equals("continuous")) {
+                        explanatorySet.add(new ContinuousAttribute(s[1], iAttribute));
+                    } else {
+                        sc.close();
+                        throw new TrainingDataException("Attributo di tipo non specificato");
+                    }
+                } else if (s[0].equals("@target")) {
+                    this.classAttribute = new ContinuousAttribute(s[1], iAttribute);
+                }
+                ++iAttribute;
+            }
+
+            this.numberOfExamples = Integer.valueOf(line.split(" ")[1]);
+            this.data = new ArrayList<>(this.numberOfExamples);
+            this.target = new ArrayList<>(this.numberOfExamples);
+
+            if (numberOfExamples == 0){
+                throw new TrainingDataException("Training set vuoto");
+            }
+
+            for (short iRow = 1; sc.hasNextLine(); ++iRow) {
+                Example e = new Example(explanatorySet.size());
+                line = sc.nextLine();
+                s = line.split(",");
+
+                for (short jColumn = 0; jColumn < s.length - 1; ++jColumn) {
+                    if(explanatorySet.get(jColumn) instanceof DiscreteAttribute){
+                    e.set(jColumn, s[jColumn]);
+                    } else {
+                        Double value = Double.parseDouble(s[jColumn]);
+                        e.set(jColumn, value);
+                        ((ContinuousAttribute) explanatorySet.get(jColumn)).setMin(value);
+                        ((ContinuousAttribute) explanatorySet.get(jColumn)).setMax(value);
+                    }
+                }
+
+                try { this.data.add(e);
+                } catch (ArrayIndexOutOfBoundsException exc){
+                    throw new TrainingDataException("Numero di esempi maggiore da quanto indicato");
+                }
+                try { this.target.add(Double.parseDouble(s[s.length-1]));
+                } catch (Exception exc) {
+                    throw new TrainingDataException("Training set privo di variabile target numerica in riga "+ iRow + 1);
+                }
+                if(iRow ==0 && !sc.hasNextLine()){
+                    throw new TrainingDataException("Training set vuoto");
+                }
+                if(!sc.hasNextLine() && iRow<numberOfExamples){
+                    throw new TrainingDataException ("Numero di esempi minore da quanto indicato");
+                }
+            }
+            sc.close();
+            scaleData();
         } catch (FileNotFoundException exc){
             throw new TrainingDataException("File di training inesistente");
         }
-
-        explanatorySet = new ArrayList<>();
-        short iAttribute = 0;
-
-        for(line = sc.nextLine(); !line.contains("@data"); line = sc.nextLine()) {
-            s = line.split(" ");
-            if (s[0].equals("@desc")){
-                if(s[2].equals("discrete")) {
-                    explanatorySet.add(new DiscreteAttribute(s[1], iAttribute));
-                } else if (s[2].equals("continuous")) {
-                    explanatorySet.add(new ContinuousAttribute(s[1], iAttribute));
-                } else
-                    throw new TrainingDataException("Attributo di tipo non specificato");
-            } else if (s[0].equals("@target")) {
-                this.classAttribute = new ContinuousAttribute(s[1], iAttribute);
-            }
-            ++iAttribute;
-        }
-
-        this.numberOfExamples = new Integer(line.split(" ")[1]);
-        this.data = new ArrayList<>(this.numberOfExamples);
-        this.target = new ArrayList<>(this.numberOfExamples);
-
-        if (numberOfExamples == 0){
-            throw new TrainingDataException("Training set vuoto");
-        }
-
-        for (short iRow = 1; sc.hasNextLine(); ++iRow) {
-            Example e = new Example(explanatorySet.size());
-            line = sc.nextLine();
-            s = line.split(",");
-
-            for (short jColumn = 0; jColumn < s.length - 1; ++jColumn) {
-                if(explanatorySet.get(jColumn) instanceof DiscreteAttribute){
-                e.set(jColumn, s[jColumn]);
-                } else {
-                    Double value = Double.parseDouble(s[jColumn]);
-                    e.set(jColumn, value);
-                    ((ContinuousAttribute) explanatorySet.get(jColumn)).setMin(value);
-                    ((ContinuousAttribute) explanatorySet.get(jColumn)).setMax(value);
-                }
-            }
-
-            try { this.data.add(e);
-            } catch (ArrayIndexOutOfBoundsException exc){
-                throw new TrainingDataException("Numero di esempi maggiore da quanto indicato");
-            }
-            try { this.target.add(Double.parseDouble(s[s.length-1]));
-            } catch (Exception exc) {
-                throw new TrainingDataException("Training set privo di variabile target numerica in riga "+ iRow + 1);
-            }
-            if(iRow ==0 && !sc.hasNextLine()){
-                throw new TrainingDataException("Training set vuoto");
-            }
-            if(!sc.hasNextLine() && iRow<numberOfExamples){
-                throw new TrainingDataException ("Numero di esempi minore da quanto indicato");
-            }
-        }
-        sc.close();
-        scaleData();
     }
 
-    public Data(DbAccess db, String table) throws TrainingDataException, InsufficientColumnNumberException, SQLException {
+    public Data(DbAccess db, String table) throws TrainingDataException, InsufficientColumnNumberException, SQLException, NoValueException {
         TableSchema ts = new TableSchema(table, db);
         TableData td = new TableData(db, ts);
         data = td.getExamples();
@@ -229,7 +230,7 @@ public class Data implements Serializable{
                 do {
                     System.out.print("Inserisci valore continuo X["+i+"]: ");
                     x=Keyboard.readDouble();
-                } while(new Double(x).equals(Double.NaN));
+                } while(Double.valueOf(x).equals(Double.NaN));
                 e.set(i,x);
             }
             i++;
